--- a/src/styles/Details.css
+++ b/src/styles/Details.css
@@ -19,36 +19,34 @@
     max-height: 100%;
     object-fit: cover; 
     border-radius: 8px; 
-    /* margin-top: 50px */
     margin-top: 10px;
-
 }
 
-.edit{
+/* Edit Section */
+.edit {
     position: relative;
-    /* border: 2px solid; */
     display: flex;
     flex-direction: column;
     align-items: center;
 }
-.edit h2{
+.edit h2 {
     text-align: center;
 }
-
-.edit input{
+.edit input {
     padding-left: 10px;
-    height: 30px;
+    height: 35px;
     border-radius: 6px;
     border: 1px solid;
     margin-bottom: 15px;
-    width: 300px;
+    width: 100%; /* Full width for better responsiveness */
+    max-width: 300px;
 }
-.edit input:hover{
+.edit input:hover {
     background-color: #ffecec8c;
 }
-.edit button{
-    height: 30px;
-    width: 130px;
+.edit button {
+    height: 35px;
+    width: 140px;
     border-radius: 4px;
     border: 1px solid black;
     font-weight: bold;
@@ -57,12 +55,11 @@
     transition: .3s ease-out;
     cursor: pointer;
 }
-.edit button:hover{
+.edit button:hover {
     scale: 1.1;
 }
 
-.x{
-    border: 1px solid;
+.x {
     font-size: 20px;
     position: absolute;
     right: 50px;
@@ -71,9 +68,8 @@
     cursor: pointer;
     transition: .3s ease-out;
 }
-.x:hover{
+.x:hover {
     scale: 1.1;
-    border: 2px solid;
 }
 
 .info-container {
@@ -85,21 +81,19 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    /* height: 100%; */
-    /* max-height: 100vh; */ 
 }
 
-
-.info-container .title{
+/* Text and Buttons */
+.info-container .title {
     text-align: center;
-    /* margin-top: -60px; */
     color: #000000;
     font-size: 30px; 
     font-weight: bold;
+}
 
-}.edit-btn{
-    width: 70px;
-    height: 30px;
+.edit-btn {
+    width: 80px;
+    height: 35px;
     border: 1px solid;
     border-radius: 4px;
     font-weight: bold;
@@ -109,36 +103,30 @@
     transition: .3s ease-out;
     cursor: pointer;
 }
-.edit-btn:hover{
+.edit-btn:hover {
     scale: 1.1;
 }
-.details-container .des{
+
+.details-container .des, 
+.details-container .date {
     text-align: start;
     padding-left: 30px;
-    font-size: 13px;
+    font-size: 14px;
 }
-.details-container .des span{
+
+.details-container .des span,
+.details-container .date span {
     color: #3e3e3e;
     font-weight: bolder;
+}
 
-}
-.details-container .date{
-    text-align: start;
-    padding-left: 30px;
-    font-size: 13px;
-}
-.details-container .date span{
-    color: #3e3e3e;
-    font-weight: bolder;
-
-}
 .remove-photo {
     background-color: red;
     font-weight: bolder;
     color: white;
     border: none;
     padding: 10px;
-   margin-top: 40px;
+    margin-top: 40px;
     border-radius: 5px;
     cursor: pointer;
     margin-left: 10px;
@@ -146,17 +134,14 @@
 }
 
 .remove-photo:hover {
-
     box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
 }
-
-
 
 .go-to-gallery {
     position: absolute;
     top: 20px;
     left: 20px; 
-    padding: 10px 20px;
+    padding: 10px 15px;
     background-color: rgb(76, 166, 76);
     color: white;
     border: none;
@@ -171,33 +156,88 @@
     scale: 1.1;
 }
 
-
-
+/* Image Slider */
 .slider {
     display: flex;
-    justify-content: space-evenly;
-    margin-top: 10px;
-    width: 55%;
-}
-
-.slider-item {
-    width: 50px;
-    height: 50px;
-    cursor: pointer;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    margin-top: 15px;
 }
 
 .slider-item img {
-    width: 100%;
-    height: 100px;
-    object-fit: cover;
-    transition: transform 0.3s ease;
+    width: 80px;
+    height: 80px;
+    border-radius: 6px;
+    cursor: pointer;
+    transition: 0.3s ease;
 }
 
 .slider-item img:hover {
     transform: scale(1.1);
 }
 
-.slider-item.main img {
-    border: 3px solid #ff0000;
-    height: 150px;
+/* ----- MOBILE RESPONSIVENESS ----- */
+@media screen and (max-width: 768px) {
+    .details-container {
+        flex-direction: column; /* Stack elements on top of each other */
+        height: auto;
+    }
+
+    .image-container {
+        flex: 1;
+        width: 100%;
+        /* border: 2px solid black; */
+        /* padding: 10px; */
+        margin-left: -8px;
+    }
+
+    .info-container {
+        flex: 1;
+        padding: 15px;
+        text-align: center;
+        width: 90%;
+        margin-left: 16px;
+    }
+
+    .info-container .title {
+        font-size: 24px;
+    }
+
+    .edit input {
+        width: 90%;
+    }
+
+    .slider {
+        flex-direction: row;
+        justify-content: center;
+        gap: 20px;
+    }
+
+    .slider-item img {
+        width: 60px;
+        height: 60px;
+    }
+
+    .go-to-gallery {
+        position: relative;
+        width:130px;
+        text-align: center;
+        margin: 10px auto;
+        display: block;
+        margin-left: -20px;
+        margin-top: -20px;
+        margin-bottom: 20px;
+    }
+
+    .remove-photo {
+        width: 90%;
+        margin: 20px auto;
+    }
+
+    .edit-btn {
+        width: 90%;
+        margin: 10px auto;
+        display: block;
+    }
 }
