--- a/src/styles/Gallery.css
+++ b/src/styles/Gallery.css
@@ -1,7 +1,7 @@
 
 
 .gallery-container header {
-    height: 100px;
+    height: 80px;
     border: 1px solid;
     border-radius: 10px;
     justify-content: space-around;
@@ -12,8 +12,12 @@
 
 .gallery-container header h2 {
     text-align: center;
-    /* margin-top: -40px; */
+    align-items: center;
+    width: 110px;
+    margin-top: -5px;
+    margin-left: 700px;
     font-size: 30px;
+    /* border: 2px solid black; */
 }
 
 .gallery-container header .search-icon{
@@ -42,12 +46,12 @@
 }
 
 .gallery-container header .crt-btn {
-    top: 20px;
+    top: 10px;
     height: 40px;
     width: 100px;
     font-size: 14px;
     font-weight: 600px;
-    margin-top: -60px;
+    margin-top: -82px;
     margin-left: 20px;
     padding: 10px 20px;
     background-color: rgb(76, 166, 76);
@@ -158,8 +162,8 @@
 
 @media (max-width: 1200px) {
     .grid {
-        column-count: 5;
-        column-width: 180px;
+        column-count: 4;
+        column-width: 100px;
     }
     .photo-cell {
         margin-left: 20px;
@@ -174,26 +178,46 @@
 }
 
 @media (max-width: 768px) {
-    .grid {
-        column-count: 3;
-        column-width: 140px;
-    }
-    .photo-cell img {
-        height: 160px;
-    }
-}
-
-@media (max-width: 576px) {
-    .grid {
+    .gallery-container .grid {
         column-count: 2;
-        column-width: 120px;
+        /* border: 2px solid black; */
+        column-width: 60px;
+        margin-top: 40px;
     }
-    .photo-cell {
+    .grid .photo-cell img {
+        height: 190px;
+    }
+    .gallery-container header{
+        height: 80px;
+        /* width: 100%; */
+    }
+    .gallery-container header h2{
+        align-items: center;
+        text-align: center;
+        margin-left: 140px;
+        margin-top: 10px;
+    }
+    .gallery-container header .crt-btn{
+        margin-bottom: 5px;
+        width: 63px;
+        text-align: center;
+        align-items: center;
+        padding: 10px;
         margin-left: 10px;
-    }
-    .photo-cell img {
-        height: 140px;
-    }
+   }
+   .gallery-container header .search-box{
+    position: absolute;
+    width: 90%;
+    /* right: -13px; */
+    border: 2px solid rgb(190, 190, 190);
+    top: 184px;
+   }
+
+   .gallery-container header .search-icon{
+    top: 80px;
+    
+   }
+
 }
 
 @media (max-width: 400px) {
