--- a/src/styles/Details.css
+++ b/src/styles/Details.css
@@ -141,6 +141,7 @@
     position: absolute;
     top: 20px;
     left: 20px; 
+    font-weight: 600;
     padding: 10px 15px;
     background-color: rgb(76, 166, 76);
     color: white;
