--- a/src/styles/Gallery.css
+++ b/src/styles/Gallery.css
@@ -42,7 +42,7 @@
 }
 
 .gallery-container header input:focus {
-    border-color: #007bff;
+    border-color: #7e7e7e;
 }
 
 .gallery-container header .crt-btn {
@@ -50,7 +50,7 @@
     height: 40px;
     width: 100px;
     font-size: 14px;
-    font-weight: 600px;
+    font-weight: bold;
     margin-top: -82px;
     margin-left: 20px;
     padding: 10px 20px;
@@ -179,10 +179,10 @@
 
 @media (max-width: 768px) {
     .gallery-container .grid {
-        column-count: 2;
+        column-count: 4;
         /* border: 2px solid black; */
         column-width: 60px;
-        margin-top: 40px;
+        margin-top: 60px;
     }
     .grid .photo-cell img {
         height: 190px;
@@ -208,16 +208,21 @@
    .gallery-container header .search-box{
     position: absolute;
     width: 90%;
+    height: 30px;
+    border-radius: 30px;
     /* right: -13px; */
     border: 2px solid rgb(190, 190, 190);
-    top: 184px;
+    top: 188px;
    }
-
    .gallery-container header .search-icon{
-    top: 80px;
-    
+    display: none;
+   }
+   .photo-cell{
+    margin-left: -4px;
    }
 
+   
+   
 }
 
 @media (max-width: 400px) {
