--- a/src/styles/Gallery.css
+++ b/src/styles/Gallery.css
@@ -181,10 +181,10 @@
 @media (max-width: 768px) {
     .gallery-container .grid {
         column-count: 4;
-        border: 2px solid black;
+        /* border: 2px solid black; */
         column-width: 60px;
-        margin-top: 120px;
-        margin-left: -4px;
+        margin-top: 60px;
+        /* margin-left: -4px; */
         
     }
     .grid .photo-cell img {
