--- a/src/styles/Gallery.css
+++ b/src/styles/Gallery.css
@@ -1,75 +1,75 @@
 
-
+/* header */
 .gallery-container header {
     height: 80px;
-    border: 1px solid;
+    border: 1px solid #ccc;
     border-radius: 10px;
-    justify-content: space-around;
     display: flex;
-    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
     background-color: rgba(244, 213, 213, 0.615);
+    padding: 0 20px;
 }
 
-.gallery-container header h2 {
-    text-align: center;
+.gallery-container header .title {
+     
+        flex-grow: 1;
+        text-align: center;
+        font-size: 30px;
+    
+}
+.gallery-container header .search-section {
+    display: flex;
     align-items: center;
-    width: 110px;
-    margin-top: -5px;
-    margin-left: 700px;
-    font-size: 30px;
-    /* border: 2px solid black; */
+    gap: 15px;
+}
+.gallery-container header .about {
+    font-size: 18px;
+    cursor: pointer;
 }
 
 .gallery-container header .search-icon{
-    position: absolute;
-    left: 96.5%;
-    margin-top: 20px;
+    font-size: 18px;
+    color: gray;
 }
 
-.gallery-container header input{
+.gallery-container header .search-box{
     width: 200px;
-    margin-left: auto;
-    margin-top: -90px;
-    margin-right: 20px;
     padding: 5px 10px;
     font-size: 14px;
     border: 1px solid #ccc;
     border-radius: 7px;
     outline: none;
-    width: 200px;
-    transition: .3s ease-in-out;
+    transition: 0.3s ease-in-out;
 
 }
 
-.gallery-container header input:focus {
+.gallery-container header .search-box:focus {
     border-color: #7e7e7e;
 }
 
 .gallery-container header .crt-btn {
-    top: 10px;
     height: 40px;
     width: 100px;
     font-size: 14px;
     font-weight: bold;
-    margin-top: -82px;
-    margin-left: 20px;
-    padding: 10px 20px;
     background-color: rgb(76, 166, 76);
     color: white;
     border: none;
     border-radius: 5px;
     transition: 0.3s ease;
-    align-items: center;
-    text-align: center;
-}
-
-
-.crt-btn:hover {
     cursor: pointer;
-    background-color: aquamarine;
-    box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
-        scale: 1.1;
 }
+
+
+.gallery-container header .crt-btn:hover {
+    /* background-color: rgb(97, 167, 144); */
+    box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
+    transform: scale(1.1);
+}
+
+
+/* grid section */
 
 
 .gallery-container .grid {
@@ -194,11 +194,11 @@
         height: 80px;
         /* width: 100%; */
     }
-    .gallery-container header h2{
+    .gallery-container header .title{
         align-items: center;
         text-align: center;
-        margin-left: 140px;
-        margin-top: 10px;
+        margin-left: 30px;
+        margin-top: 20px;
     }
     .gallery-container header .crt-btn{
         margin-bottom: 5px;
@@ -206,20 +206,24 @@
         text-align: center;
         align-items: center;
         padding: 10px;
-        margin-left: 10px;
+        margin-left: -10px;
    }
+
    .gallery-container header .search-box{
     position: absolute;
     width: 90%;
     height: 30px;
     border-radius: 30px;
     /* right: -13px; */
+    left: 8px;
     border: 2px solid rgb(190, 190, 190);
-    top: 188px;
+    top: 98px;
    }
+
    .gallery-container header .search-icon{
     display: none;
    }
+
    .photo-cell{
     margin-left: -4px;
    }
