--- a/src/styles/Details.css
+++ b/src/styles/Details.css
@@ -6,12 +6,13 @@
 }
 
 .image-container {
-    flex: 7; 
+    flex: 8; 
     display: flex;
     align-items: center; 
     justify-content: center; 
     flex-direction: column;
     padding: 20px; 
+    margin-top: 80px;
 }
 
 .image-container img {
@@ -20,6 +21,9 @@
     object-fit: cover; 
     border-radius: 8px; 
     margin-top: 10px;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+        /* border: 2px solid #000000; */
+
 }
 
 /* Edit Section */
