--- a/src/styles/Gallery.css
+++ b/src/styles/Gallery.css
@@ -65,7 +65,7 @@
 .gallery-container header .crt-btn:hover {
     /* background-color: rgb(97, 167, 144); */
     box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
-    transform: scale(1.1);
+    /* transform: scale(1.1); */
 }
 
 
@@ -74,7 +74,7 @@
 
 .gallery-container .grid {
     border: 2px solid;
-    margin-top: 30px;
+    margin-top: 20px;
     height: 100%;
     /* margin-left: 50px; */
     background-color: rgba(219, 246, 223, 0.721);
@@ -119,7 +119,9 @@
     cursor: pointer;
 }
 .plus:hover{
-    transform: scale(1.1);
+    /* transform: scale(1.1); */
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px, rgba(0, 0, 0, 0.22) 0px 10px 10px;
+    background-color: rgba(218, 208, 208, 0.747);
 }
 
 
@@ -156,9 +158,9 @@
     transition: .3s ease-out;
     font-weight: bold;
 }
-.photo-cell button:hover{
+/* .photo-cell button:hover{
     scale: 1.1;
-}
+} */
 
 
 @media (max-width: 1200px) {
